# Customer-Support-Ticket-Management

./: .dockerignore  .env.explain  Dockerfile  LICENSE  LINKEDIN_POST_DRAFT.md  Makefile  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: aws.yml
data/: faq_database.json
docs/: AGENT_CODE_WALKTHROUGH.md  API_REFERENCE.md  ARCHITECTURE.md  LANGGRAPH_ORCHESTRATION.md  TESTING_AGENTS_INDEPENDENTLY.md  workflow-diagram.md
docs/diagrams/: FILES.md  README.md  complete-workflow.mmd  faq-comparison.mmd  sequence-diagram.mmd  state-flow.mmd
scripts/: add_faq.py  run_example.py  run_individual_agents.sh  run_tests.sh  test_agent_standalone.py  test_api.py
src/: __init__.py  config.py  workflow.py
src/agents/: __init__.py  billing_agent.py  classifier_agent.py  escalation_agent.py  escalation_response_agent.py  faq_agent.py  general_agent.py  intake_agent.py  response_agent.py  technical_agent.py
src/api/: __init__.py  main.py
src/models/: __init__.py  state.py
src/utils/: __init__.py  faq_debug.py  logger.py  metrics.py  seed_faqs.py
tests/: README.md  __init__.py  conftest.py  test.py  test_billing_agent.py  test_classifier_agent.py  test_escalation_agent.py  test_escalation_response_agent.py  test_faq_agent.py  test_general_agent.py  test_intake_agent.py  test_response_agent.py  test_technical_agent.py
tests/integration/: __init__.py  test_agents_independently.py
